[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/characters/npc.png" type="Texture" id=1]
[ext_resource path="res://bot.gd" type="Script" id=2]
[ext_resource path="res://canvas.gd" type="Script" id=3]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform int p = 4;

void fragment()
{
	
	ivec2 size = textureSize(TEXTURE, 0);
	
	int xRes = size.x;
	int yRes = size.y;
	
	float xFactor = float(xRes) / float(p);
	float yFactor = float(yRes) / float(p);
	
	float grid_uv_x = round(UV.x * xFactor) / xFactor;
	float grid_uv_y = round(UV.y * yFactor) / yFactor;
	
	vec4 text = texture(TEXTURE, vec2(grid_uv_x, grid_uv_y));
	
	COLOR = text;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/p = 1

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.25, 19 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61.5, 55.5 )

[node name="Npc" type="KinematicBody2D"]
position = Vector2( -4, 3 )
script = ExtResource( 2 )

[node name="Icon" type="Sprite" parent="."]
material = SubResource( 4 )
position = Vector2( -5.96046e-08, 2.38419e-07 )
scale = Vector2( 0.484, 0.464 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
shape = SubResource( 1 )

[node name="collider" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collider"]
position = Vector2( 2.5, 0.5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[connection signal="area_entered" from="collider" to="." method="_on_collider_area_entered"]
[connection signal="body_entered" from="collider" to="." method="_on_collider_body_entered"]
[connection signal="body_entered" from="collider" to="CanvasLayer" method="_on_collider_body_entered"]
[connection signal="body_exited" from="collider" to="." method="_on_collider_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
